feat: add CI workflow and integration tests for core commands

--- a/man/man1/git-worktree-tasks_create.1
+++ b/man/man1/git-worktree-tasks_create.1
@@ -14,8 +14,8 @@ Create a worktree and branch for a task
 
 
 .SH OPTIONS
-\fB--base\fP="main"
-	base branch to create from
+\fB--base\fP=""
+	base branch to create from (default: current branch)
 
 .PP
 \fB--dry-run\fP[=false]
