--- a/man/man1/git-worktree-tasks_create.1
+++ b/man/man1/git-worktree-tasks_create.1
@@ -1,5 +1,5 @@
 .nh
-.TH "GIT-WORKTREE-TASKS" "1" "Jan 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
+.TH "GIT-WORKTREE-TASKS" "1" "Feb 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
 
 .SH NAME
 git-worktree-tasks-create - Create a worktree and branch for a task
@@ -43,6 +43,10 @@ Create a worktree and branch for a task
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+\fB--mode\fP="classic"
+	execution mode: classic or codex
+
+.PP
 \fB--nocolor\fP[=false]
 	disable color output
 
