--- a/man/man1/gwtt_list.1
+++ b/man/man1/gwtt_list.1
@@ -1,5 +1,5 @@
 .nh
-.TH "GWTT" "1" "Jan 2026" "gwtt" "Git Worktree Tasks Manual"
+.TH "GWTT" "1" "Feb 2026" "gwtt" "Git Worktree Tasks Manual"
 
 .SH NAME
 gwtt-list - List task worktrees
@@ -47,6 +47,10 @@ List task worktrees
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+\fB--mode\fP="classic"
+	execution mode: classic or codex
+
+.PP
 \fB--nocolor\fP[=false]
 	disable color output
 
