--- a/man/man1/git-worktree-tasks_finish.1
+++ b/man/man1/git-worktree-tasks_finish.1
@@ -1,5 +1,5 @@
 .nh
-.TH "GIT-WORKTREE-TASKS" "1" "Jan 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
+.TH "GIT-WORKTREE-TASKS" "1" "Feb 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
 
 .SH NAME
 git-worktree-tasks-finish - Merge a task branch into a target branch
@@ -59,6 +59,10 @@ Merge a task branch into a target branch
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+\fB--mode\fP="classic"
+	execution mode: classic or codex
+
+.PP
 \fB--nocolor\fP[=false]
 	disable color output
 
