--- a/man/man1/git-worktree-tasks_list.1
+++ b/man/man1/git-worktree-tasks_list.1
@@ -1,5 +1,5 @@
 .nh
-.TH "GIT-WORKTREE-TASKS" "1" "Jan 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
+.TH "GIT-WORKTREE-TASKS" "1" "Feb 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
 
 .SH NAME
 git-worktree-tasks-list - List task worktrees
@@ -47,6 +47,10 @@ List task worktrees
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+\fB--mode\fP="classic"
+	execution mode: classic or codex
+
+.PP
 \fB--nocolor\fP[=false]
 	disable color output
 
