--- a/man/man1/gwtt_overwrite.1
+++ b/man/man1/gwtt_overwrite.1
@@ -1,16 +1,16 @@
 .nh
-.TH "GIT-WORKTREE-TASKS" "1" "Feb 2026" "git-worktree-tasks" "Git Worktree Tasks Manual"
+.TH "GWTT" "1" "Feb 2026" "gwtt" "Git Worktree Tasks Manual"
 
 .SH NAME
-git-worktree-tasks-apply - Apply non-destructive changes between a Codex worktree and local checkout
+gwtt-overwrite - Overwrite destination with source changes in codex mode
 
 
 .SH SYNOPSIS
-\fBgit-worktree-tasks apply  [flags]\fP
+\fBgwtt overwrite  [flags]\fP
 
 
 .SH DESCRIPTION
-Apply non-destructive changes between a Codex worktree and local checkout
+Overwrite destination with source changes in codex mode
 
 
 .SH OPTIONS
@@ -18,12 +18,8 @@ Apply non-destructive changes between a Codex worktree and local checkout
 	show git commands without executing
 
 .PP
-\fB--force\fP[=false]
-	compatibility alias for overwrite behavior
-
-.PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for apply
+	help for overwrite
 
 .PP
 \fB--to\fP="local"
@@ -52,4 +48,4 @@ Apply non-destructive changes between a Codex worktree and local checkout
 
 
 .SH SEE ALSO
-\fBgit-worktree-tasks(1)\fP
+\fBgwtt(1)\fP
