chore: add -m shorthand for `--mode` flag

--- a/man/man1/git-worktree-tasks.1
+++ b/man/man1/git-worktree-tasks.1
@@ -18,7 +18,7 @@ Create, manage, and clean up git worktrees based on task names.
 	help for git-worktree-tasks
 
 .PP
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
