--- a/man/man1/git-worktree-tasks_apply.1
+++ b/man/man1/git-worktree-tasks_apply.1
@@ -35,7 +35,7 @@ Apply non-destructive changes between a Codex worktree and local checkout
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
