--- a/man/man1/git-worktree-tasks_cleanup.1
+++ b/man/man1/git-worktree-tasks_cleanup.1
@@ -43,7 +43,7 @@ Remove a task worktree and/or branch
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
