--- a/man/man1/git-worktree-tasks_finish.1
+++ b/man/man1/git-worktree-tasks_finish.1
@@ -59,7 +59,7 @@ Merge a task branch into a target branch
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
