--- a/man/man1/gwtt.1
+++ b/man/man1/gwtt.1
@@ -18,7 +18,7 @@ Create, manage, and clean up git worktrees based on task names.
 	help for gwtt
 
 .PP
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
