--- a/man/man1/gwtt_create.1
+++ b/man/man1/gwtt_create.1
@@ -43,7 +43,7 @@ Create a worktree and branch for a task
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
