--- a/man/man1/gwtt_list.1
+++ b/man/man1/gwtt_list.1
@@ -47,7 +47,7 @@ List task worktrees
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
