--- a/man/man1/gwtt_overwrite.1
+++ b/man/man1/gwtt_overwrite.1
@@ -31,7 +31,7 @@ Overwrite destination with source changes in codex mode
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
