--- a/man/man1/gwtt_status.1
+++ b/man/man1/gwtt_status.1
@@ -51,7 +51,7 @@ Show detailed worktree status
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
-\fB--mode\fP="classic"
+\fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
 
 .PP
