--- a/man/man1/git-worktree-tasks_apply.1
+++ b/man/man1/git-worktree-tasks_apply.1
@@ -35,8 +35,16 @@ Apply non-destructive changes between a Codex worktree and local checkout
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+\fB--mask-sensitive-paths\fP[=true]
+	mask home-directory paths in --dry-run output
+
+.PP
 \fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
+
+.PP
+\fB--no-mask-sensitive-paths\fP[=false]
+	disable home-directory path masking in --dry-run output
 
 .PP
 \fB--nocolor\fP[=false]
