--- a/man/man1/gwtt_create.1
+++ b/man/man1/gwtt_create.1
@@ -43,8 +43,16 @@ Create a worktree and branch for a task
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+\fB--mask-sensitive-paths\fP[=true]
+	mask home-directory paths in --dry-run output
+
+.PP
 \fB-m\fP, \fB--mode\fP="classic"
 	execution mode: classic or codex
+
+.PP
+\fB--no-mask-sensitive-paths\fP[=false]
+	disable home-directory path masking in --dry-run output
 
 .PP
 \fB--nocolor\fP[=false]
